--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -24,7 +24,7 @@
 
     <h3 class="text-center">Distribuição, Movimentação e Contribuição</h3>
 
-    <div class="prospera-margin prsps-dist text-center">
+    <div class="prospera-margin prsps-dist text-center container">
       <table class="table table-bordered">
         <thead>
           <tr>
@@ -66,31 +66,36 @@
 
   <section class="quemsomos-content">
     <h3 class="text-center">+ QUEM SOMOS +</h3>
-    <div class="video-container row">
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="//player.vimeo.com/video/118732545" ></iframe>
+    <div class="video-container container">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="//player.vimeo.com/video/118732545" ></iframe>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="text-container">
-      <p class="prospera-margin col-md-6 text-justify">Esse novo modelo de organização distribuída, deve ser construído sob um novo conjunto de princípios, opostos aos da OIM, sob um novo paradigma que priorize também a eficácia e não só a eficiência, sem hierarquia e funções pré-definidas, sem processos decisórios e seletivos, sem patrimônio ou fundos comuns administrados por uma equipe ou grupo. Uma organização aberta e inclusiva, transparente e que segue um modelo exponencial e abundante, com foco na evolução bem como na sobrevivência, uma organização que prospera.</p>
-      <p class="prospera-margin col-md-6 text-justify">As novas tecnologias da informação e comunicação móvel, principalmente a Internet, tem atuado fortemente nessa equação e colocado as Organizações de Modelo Industrial (OMI) em cheque, uma vez que permitem modelos distribuídos de organização, mostrando que a facilidade de conexão e acesso a informações tem um efeito devastador nos custos de transação, permitindo que a busca direta ao mercado seja feita com maior eficiência, velocidade, e eficiência que aquela feita por meio de uma “Firma”3.</p>
-    </div>
 
-    <div class="companies-container row">
-      <div class="col-md-2 col-md-offset-1 text-center">
-        <img src="{% static 'img/logo-criptotransfer.jpg' %}" alt="Criptotransfer">
+      <div class="text-container row">
+        <p class="prospera-margin col-md-6 text-justify">Esse novo modelo de organização distribuída, deve ser construído sob um novo conjunto de princípios, opostos aos da OIM, sob um novo paradigma que priorize também a eficácia e não só a eficiência, sem hierarquia e funções pré-definidas, sem processos decisórios e seletivos, sem patrimônio ou fundos comuns administrados por uma equipe ou grupo. Uma organização aberta e inclusiva, transparente e que segue um modelo exponencial e abundante, com foco na evolução bem como na sobrevivência, uma organização que prospera.</p>
+        <p class="prospera-margin col-md-6 text-justify">As novas tecnologias da informação e comunicação móvel, principalmente a Internet, tem atuado fortemente nessa equação e colocado as Organizações de Modelo Industrial (OMI) em cheque, uma vez que permitem modelos distribuídos de organização, mostrando que a facilidade de conexão e acesso a informações tem um efeito devastador nos custos de transação, permitindo que a busca direta ao mercado seja feita com maior eficiência, velocidade, e eficiência que aquela feita por meio de uma “Firma”3.</p>
       </div>
-      <div class="col-md-2 text-center">
-        <img src="{% static 'img/logo-blockpub.jpg' %}" alt="Blockpub">
-      </div>
-      <div class="col-md-2 text-center">
-        <img src="{% static 'img/logo-blockchainrevolution.jpg' %}" alt="Blockchain Revolution">
-      </div>
-      <div class="col-md-2 text-center">
-        <img src="{% static 'img/logo-justvirtual.jpg' %}" alt="Just Virtual">
-      </div>
-      <div class="col-md-2 text-center">
-        <img src="{% static 'img/logo-pimpadas.jpg' %}" alt="Pimpadas">
+
+      <div class="companies-container row">
+        <div class="col-md-2 col-md-offset-1 text-center">
+          <img src="{% static 'img/logo-criptotransfer.jpg' %}" alt="Criptotransfer">
+        </div>
+        <div class="col-md-2 text-center">
+          <img src="{% static 'img/logo-blockpub.jpg' %}" alt="Blockpub">
+        </div>
+        <div class="col-md-2 text-center">
+          <img src="{% static 'img/logo-blockchainrevolution.jpg' %}" alt="Blockchain Revolution">
+        </div>
+        <div class="col-md-2 text-center">
+          <img src="{% static 'img/logo-justvirtual.jpg' %}" alt="Just Virtual">
+        </div>
+        <div class="col-md-2 text-center">
+          <img src="{% static 'img/logo-pimpadas.jpg' %}" alt="Pimpadas">
+        </div>
       </div>
     </div>
   </section>
