Adicionando botão voltar em detalhes de Comunidade

--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -362,7 +362,7 @@ h4{font-size: 12px;}
       }
       .contato-content{
         margin: auto;
-
+        margin-top: 80px;
         background-color: transparentize($branco, .9);
         height: 70px;
         .item-contato{
