--- a/plataforma/templates/pages/object_detail.html
+++ b/plataforma/templates/pages/object_detail.html
@@ -3,11 +3,9 @@
 {% block bodyclass %}class="objeto-detail"{% endblock %}
 {% block content %}
 <div id="object-detail">
-
-
     <section class="descricao-content container">
       <div class="row">
-        <a href="{% url 'nos_list' %}">
+        <a href="{% url 'nos_detail' objeto.nodos.slug %}">
           <img class="voltar" src="{% static 'img/voltar.png' %}" alt="Voltar">
         </a>
         <h1>+ OBJETO +</h1>
@@ -23,22 +21,14 @@
           <h4 class="owner media-heading">Criado por: <a>{{ objeto.criado_por }}</a></h4>
         </div>
       </div>
-
-        <!-- {{ objeto.descricao }}
-        <hr /> -->
-
         <!-- {% if objeto.criado_por == user %}
         <a href="{% url "object_update" objeto.nodos.slug objeto.slug %}" class="btn btn-default" role="button">Editar</a>
         {% endif %} -->
         <!-- <br /> -->
     </section>
 
-    <section>
-        <!-- <h4 class="media-heading">WYSIWYG</h4> Ipsum Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Ipsum Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        <hr /> -->
+    <section class="container">
+      <p class="description">{{ objeto.descricao }}</p>
     </section>
 
     {% if objeto.contato_facebook or objeto.contato_whatsapp %}
@@ -50,20 +40,10 @@
         {% if objeto.contato_whatsapp %}
         <a href="{{ objeto.contato_whatsapp }}" target="_blank"><i class="fa fa-whatsapp item-contato" aria-hidden="true"></i></a>
         {% endif %}
-        <a href="{{ objeto.contato_whatsapp }}" target="_blank"><img class="zoom item-contato" src="{% static 'img/zoom.png' %}" alt="Zoom"></a>
+        <a href="{{ objeto.get_endereco_sala }}" target="_blank"><img class="zoom item-contato" src="{% static 'img/zoom.png' %}" alt="Zoom"></a>
       </div>
-        <!-- <h2>Contato</h2>
-        {% if objeto.contato_facebook %}
-        <a href="{{ objeto.contato_facebook }}" class="btn btn-default" role="button">Facebook</a>
-        {% endif %}
-        {% if objeto.contato_whatsapp %}
-        <a href="{{ objeto.contato_whatsapp }}" class="btn btn-default" role="button">Whatsapp</a>
-        {% endif %} -->
     </section>
     {% endif %}
-
-    <!-- <iframe src="{{ objeto.get_endereco_sala }}"></iframe> -->
-
 </div>
 
 {% endblock %}
