Customizando create para Comunidades

--- a/plataforma/static/dev/scss/_colors.scss
+++ b/plataforma/static/dev/scss/_colors.scss
@@ -4,6 +4,7 @@ $primeHighlight: rgb(152, 20, 88);
 $azul: rgba(17, 28, 60, 1);
 $azulClaro: rgba(33, 239, 233, 1);
 $azulObjeto: rgba(20, 92, 237, 1);
+$azulCinza: rgba(59, 70, 95, 1);
 
 $cinza: rgb(82, 82, 82);
 
