--- a/plataforma/templates/pages/nos_create_form.html
+++ b/plataforma/templates/pages/nos_create_form.html
@@ -1,28 +1,41 @@
 {% extends "base.html" %}
+
+{% block bodyclass %}class="comunidades"{% endblock %}
 {% block content %}
 
 <div class="nos-create">
-    <h1>Criar Novo Nós</h1>
-    <form enctype="multipart/form-data" method="POST">
-        {% if form.non_field_errors %}
-        <div class="alert alert-danger alert-dismissible" role="alert">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          {% for err in form.non_field_errors %}
-            {{ err }}
+  <section class="descricao-content container">
+    <div class="row">
+      <h1 class="col-md-10 col-lg-12 col-md-offset-1 col-lg-offset-0">+ Criar uma Comunidade +</h1>
+    </div>
+    <div class="row">
+      <form class="prospera-margin" enctype="multipart/form-data" method="POST">
+          {% if form.non_field_errors %}
+          <div class="alert alert-danger alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            {% for err in form.non_field_errors %}
+              {{ err }}
+            {% endfor %}
+          </div>
+        {% endif %}
+        {% csrf_token %}
+
+        <div class="col-md-6">
+          {% for field in form %}
+            <div class="form-group{% if field.errors%} has-error{% endif %}">
+              <label for="{{ field.auto_id }}">{{ field.label }}</label>
+              <input id="{{ field.auto_id }}" class="form-control" name="{{ field.name }}" type="{{ field.field.widget.input_type }}">
+             <span class="help-block">{{ field.errors }}</span>
+                  </div>
           {% endfor %}
+          <button class="btn btn-prospera btn-lg" type="submit">Criar</button>
         </div>
-      {% endif %}
-      {% csrf_token %}
-
-      {% for field in form %}
-        <div class="form-group{% if field.errors%} has-error{% endif %}">
-               <input id="{{ field.auto_id }}" class="form-control" placeholder="{{ field.label }}" name="{{ field.name }}" type="{{ field.field.widget.input_type }}">
-         <span class="help-block">{{ field.errors }}</span>
-              </div>
-      {% endfor %}
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Criar Nós</button>
-    </form>
-
+        <div class="col-md-6">
+          <!-- upload de imagem -->
+        </div>
+      </form>
+    </div>
+  </section>
 </div>
 
 {% endblock %}
