Customizando tela para criação de objetos

--- a/plataforma/static/dev/scss/_colors.scss
+++ b/plataforma/static/dev/scss/_colors.scss
@@ -1,5 +1,6 @@
 $prime: rgba(255, 41, 106, 1);
 $primeHighlight: rgb(152, 20, 88);
+$primeCinza: rgba(255, 80, 134, 1);
 
 $azul: rgba(17, 28, 60, 1);
 $azulClaro: rgba(33, 239, 233, 1);
