Customizando form de create Comunidade/Objeto

--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -54,4 +54,5 @@
     <script src="{% static "js/jquery-1.12.4.min.js" %}"></script>
     <script src="{% static "js/bootstrap.min.js" %}"></script>
     <script src="{% static "js/alert.js" %}"></script>
+    {% block customjs %}{% endblock %}
 </body>
