--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -324,6 +324,42 @@ h4{font-size: 12px;}
         color: $preto;
         font-weight: 300;
       }
+      .upload-background{
+        background: white;
+        position: relative;
+        width: 350px;
+        height: 220px;
+        img{
+          max-height: 100%;
+          max-width: 100%;
+          width: auto;
+          height: auto;
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          margin: auto;
+        }
+      }
+      .ex{
+        color: $branco;
+        text-transform: uppercase;
+        font-family: $gotham;
+        font-weight: 200;
+        font-size: 10px;
+      }
+      input[type="file"] {
+        display: none;
+      }
+      .file-upload {
+        background-color: $azulClaro;
+        color: $preto;
+        font-weight: 300;
+        font-size: 14px;
+        display: inline-block;
+        cursor: pointer;
+      }
     }
 
 
