--- a/plataforma/templates/pages/nos_create_form.html
+++ b/plataforma/templates/pages/nos_create_form.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block bodyclass %}class="comunidades"{% endblock %}
 {% block content %}
@@ -19,23 +20,79 @@
           </div>
         {% endif %}
         {% csrf_token %}
+        <div>
+          <div class="col-md-6">
+            <div class="form-group{% if form.nome.errors %} has-error{% endif %}">
+              <label for="nome">Nome da Comunidade</label>
+              <input type="text" name="nome" id="nome" class="form-control" value="{{ form.nome.value|default:"" }}">
+              <span class="help-block">{{ form.nome.errors }}</span>
+            </div>
 
-        <div class="col-md-6">
-          {% for field in form %}
-            <div class="form-group{% if field.errors%} has-error{% endif %}">
-              <label for="{{ field.auto_id }}">{{ field.label }}</label>
-              <input id="{{ field.auto_id }}" class="form-control" name="{{ field.name }}" type="{{ field.field.widget.input_type }}">
-             <span class="help-block">{{ field.errors }}</span>
-                  </div>
-          {% endfor %}
-          <button class="btn btn-prospera btn-lg" type="submit">Criar</button>
-        </div>
-        <div class="col-md-6">
-          <!-- upload de imagem -->
+            <div class="form-group{% if form.descricao.errors %} has-error{% endif %}">
+              <label for="descricao">Resumo da Descrição (máx 140 caracteres)</label>
+              <input type="text" name="descricao" id="descricao" class="form-control" value="{{ form.descricao.value|default:"" }}">
+              <span class="help-block">{{ form.descricao.errors }}</span>
+            </div>
+
+            <div class="form-group{% if form.descricao.errors %} has-error{% endif %}">
+              <label for="descricao">Descrição</label>
+              <input type="text" name="descricao" id="descricao" class="form-control" value="{{ form.descricao.value|default:"" }}">
+              <span class="help-block">{{ form.descricao.errors }}</span>
+            </div>
+
+            <div class="form-group{% if form.contato_facebook.errors %} has-error{% endif %}">
+              <label for="contato_facebook">Link para grupo no Facebook</label>
+              <input type="text" name="contato_facebook" id="contato_facebook" class="form-control" value="{{ form.contato_facebook.value|default:"" }}">
+              <span class="help-block">{{ form.contato_facebook.errors }}</span>
+            </div>
+
+            <div class="form-group{% if form.contato_whatsapp.errors %} has-error{% endif %}">
+              <label for="contato_whatsapp">Link para grupo no Whatsapp</label>
+              <input type="text" name="contato_whatsapp" id="contato_whatsapp" class="form-control" value="{{ form.contato_whatsapp.value|default:"" }}">
+              <span class="help-block">{{ form.contato_whatsapp.errors }}</span>
+            </div>
+
+            <div class="form-group{% if form.contato_whatsapp.errors %} has-error{% endif %}">
+              <label for="contato_whatsapp">Link para grupo no Zoom</label>
+              <input type="text" name="contato_whatsapp" id="contato_whatsapp" class="form-control" value="{{ form.contato_whatsapp.value|default:"" }}">
+              <span class="help-block">{{ form.contato_whatsapp.errors }}</span>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="upload-background">
+              <img class="inline-block upload-image" src="{% static 'img/prospera-modal.png' %}" alt="Prsp">
+            </div>
+            <label>Upload da Imagem</label>
+            <p class="ex">Best Fit: 500px x 315px</p>
+            <p class="ex">Tamanho máximo 2MB</p>
+            <div class="form-group">
+              <label for="id_imagem_listagem" class="file-upload btn btn-prospera btn-lg">Selecionar</label>
+              <input id="id_imagem_listagem" class="form-control" name="imagem_listagem" type="file">
+              <span class="help-block"></span>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <button class="btn btn-prospera btn-lg" type="submit">Criar</button>
+          </div>
         </div>
       </form>
     </div>
   </section>
 </div>
-
 {% endblock %}
+
+{% block customjs %}
+<script type="text/javascript">
+  $(document).ready(function() {
+    $('#id_imagem_listagem').change(function(){
+      var imageInput = $(this)
+      var file = imageInput[0].files[0]
+      var reader = new FileReader()
+      reader.readAsDataURL(file)
+      reader.onload = function (index) {
+          $('img.upload-image').attr('src', this.result);
+      }.bind(reader);
+    });
+  })
+</script>
+{% endblock%}
