--- a/plataforma/templates/pages/nos_list.html
+++ b/plataforma/templates/pages/nos_list.html
@@ -25,10 +25,10 @@
           {% for nos in object_list %}
           <a class="col-sm-6 col-md-4" href="{% url 'nos_detail' nos.slug %}">
             <div class="thumbnail">
-              {% if nos.imagem_listagem %}
-                <img class="media-object" src="{{ nos.imagem_listagem.url }}" alt="...">
+              {% if nos.imagem %}
+                <img class="media-object" src="{{ nos.imagem.url }}" alt="...">
               {% else %}
-                <img class="media-object" src="http://placehold.it/400x300/ffffff/e8117f" alt="...">
+                <img class="media-object" src="{% static 'img/default_comunidade.jpg' %}" alt="...">
               {% endif %}
               <div class="caption">
                 <h2>{{ nos.nome }}</h2>
