--- a/plataforma/templates/pages/nos_detail.html
+++ b/plataforma/templates/pages/nos_detail.html
@@ -9,10 +9,10 @@
           <img class="voltar" src="{% static 'img/voltar.png' %}" alt="Voltar">
         </a>
         <h1>+ Comunidade +</h1>
-        {% if nos.imagem_detalhes %}
-        <img class="col-md-6" src="{{ nos.imagem_detalhes.url }}" alt="{{ nos.nome }}" title="{{ nos.nome }}">
+        {% if nos.imagem %}
+        <img class="col-md-6" src="{{ nos.imagem.url }}" alt="{{ nos.nome }}" title="{{ nos.nome }}">
         {% else %}
-        <img class="col-md-6" src="http://placehold.it/500x300/ffffff/e8117f/" alt="{{ nos.nome }}" title="{{ nos.nome }}">
+        <img class="col-md-6" src="{% static 'img/default_comunidade.jpg' %}" alt="{{ nos.nome }}" title="{{ nos.nome }}">
         {% endif %}
 
         <div class="col-md-6">
@@ -32,8 +32,8 @@
           {% for objeto in nos.objeto_set.all %}
           <div class="col-xs-6 col-md-2">
             <a href="{% url 'object_detail' nos.slug objeto.slug %}">
-              {% if objeto.imagem_listagem %}
-              <img class="objeto-imagem" src="{{ objeto.imagem_listagem.url }}" alt="{{ objeto.nome }}" title="{{ objeto.nome }}">
+              {% if objeto.imagem %}
+              <img class="objeto-imagem" src="{{ objeto.imagem.url }}" alt="{{ objeto.nome }}" title="{{ objeto.nome }}">
               {% else %}
               <img class="objeto-imagem" src="http://placehold.it/120x120" alt="{{ objeto.nome }}" title="{{ objeto.nome }}">
               {% endif %}
