Finalizando create dos objetos/comunidades

--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -51,8 +51,9 @@
         {% endif %}
         {% block content %}{% endblock %}
     </div>
-    <script src="{% static "js/jquery-1.12.4.min.js" %}"></script>
-    <script src="{% static "js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/alert.js" %}"></script>
+    <script src="{% static "dist/jquery-1.12.4.min.js" %}"></script>
+    <script src="{% static "dist/bootstrap.min.js" %}"></script>
+    <script src="{% static "dist/alert.js" %}"></script>
+    <script src="{% static "dist/main.min.js" %}"></script>
     {% block customjs %}{% endblock %}
 </body>
