--- a/plataforma/templates/pages/object_create_form.html
+++ b/plataforma/templates/pages/object_create_form.html
@@ -3,7 +3,7 @@
 {% block bodyclass %}class="comunidade-detail"{% endblock %}
 {% block content %}
 
-<div class="object-create">
+<div class="object-create create">
   <section class="descricao-content container">
     <div class="row">
       <h1 class="col-md-10 col-lg-12 col-md-offset-1 col-lg-offset-0">+ Criar um Objeto +</h1>
@@ -28,12 +28,6 @@
             </div>
 
             <div class="form-group{% if form.descricao.errors %} has-error{% endif %}">
-              <label for="descricao">Resumo da Descrição (máx 140 caracteres)</label>
-              <input type="text" name="descricao" id="descricao" class="form-control" value="{{ form.descricao.value|default:"" }}">
-              <span class="help-block">{{ form.descricao.errors }}</span>
-            </div>
-
-            <div class="form-group{% if form.descricao.errors %} has-error{% endif %}">
               <label for="descricao">Descrição</label>
               <input type="text" name="descricao" id="descricao" class="form-control" value="{{ form.descricao.value|default:"" }}">
               <span class="help-block">{{ form.descricao.errors }}</span>
@@ -51,23 +45,23 @@
               <span class="help-block">{{ form.contato_whatsapp.errors }}</span>
             </div>
 
-            <div class="form-group{% if form.contato_whatsapp.errors %} has-error{% endif %}">
-              <label for="contato_whatsapp">Link para grupo no Zoom</label>
-              <input type="text" name="contato_whatsapp" id="contato_whatsapp" class="form-control" value="{{ form.contato_whatsapp.value|default:"" }}">
-              <span class="help-block">{{ form.contato_whatsapp.errors }}</span>
+            <div class="form-group{% if form.contato_zoom.errors %} has-error{% endif %}">
+              <label for="contato_zoom">Link para grupo no Zoom</label>
+              <input type="text" name="contato_zoom" id="contato_zoom" class="form-control" value="{{ form.contato_zoom.value|default:"" }}">
+              <span class="help-block">{{ form.contato_zoom.errors }}</span>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="upload-background">
-              <img class="inline-block" src="{% static 'img/prospera-modal.png' %}" alt="Prsp">
+            <div class="upload-background round">
+              <img class="inline-block upload-image" src="{% static 'img/prospera-modal.png' %}" alt="Prsp">
             </div>
             <label>Upload da Imagem</label>
-            <p class="ex">Best Fit: 500px x 315px</p>
+            <p class="ex">Best Fit: 400px x 400px</p>
             <p class="ex">Tamanho máximo 2MB</p>
-            <div class="form-group">
-              <label for="id_imagem_listagem" class="file-upload btn btn-prospera btn-lg">Selecionar</label>
-              <input id="id_imagem_listagem" class="form-control" name="imagem_listagem" type="file">
-              <span class="help-block"></span>
+            <div class="form-group {% if form.imagem.errors %} has-error{% endif %}">
+              <label for="id_imagem" class="file-upload btn btn-prospera btn-lg">Selecionar</label>
+              <input id="id_imagem" class="form-control" name="imagem" type="file">
+              <span class="help-block">{{ form.imagem.errors }}</span>
             </div>
           </div>
           <div class="col-xs-12">
@@ -78,25 +72,4 @@
     </div>
   </section>
 </div>
-
-<script type="text/javascript">
-  $(document).ready(function() {
-    $("#upload").change(function() {
-        alert('changed!');
-    });
-    $('#id_imagem_listagem').change(function(){
-      console.log("HERE!");
-
-      // var imageInput = $('input')
-      // var file = imageInput[0].files[0]
-      //
-      // var reader = new FileReader()
-      // reader.readAsDataURL(file)
-      // reader.onload = function (index) {
-      //     $('img').attr('src', this.result);
-      // }.bind(reader);
-    });
-  })
-</script>
-
 {% endblock %}
