--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -117,6 +117,13 @@ h4{font-size: 12px;}
   }
 }
 
+.btn-edit{
+  background-color: transparent;
+  border: 1px solid;
+  padding: 10px 14px;
+  font-size: 10px;
+}
+
 // Maring
 .prospera-margin{
   margin: 90px auto;
@@ -300,6 +307,51 @@ h4{font-size: 12px;}
       }
     }
 
+    // Basic create
+    .create{
+      .upload-background{
+        background: white;
+        position: relative;
+        width: 350px;
+        height: 220px;
+        img{
+          max-height: 100%;
+          max-width: 100%;
+          width: auto;
+          height: auto;
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          margin: auto;
+        }
+        &.round{
+          width: 220px;
+          border-radius: 50%;
+          img{border-radius: 50%;}
+        }
+      }
+      .ex{
+        color: $branco;
+        text-transform: uppercase;
+        font-family: $gotham;
+        font-weight: 200;
+        font-size: 10px;
+      }
+      input[type="file"] {
+        display: none;
+      }
+      .file-upload {
+        background-color: $azulClaro;
+        color: $preto;
+        font-weight: 300;
+        font-size: 14px;
+        display: inline-block;
+        cursor: pointer;
+      }
+    }
+
     // Comunidade Create
     .nos-create{
       .descricao-content{
@@ -324,43 +376,9 @@ h4{font-size: 12px;}
         color: $preto;
         font-weight: 300;
       }
-      .upload-background{
-        background: white;
-        position: relative;
-        width: 350px;
-        height: 220px;
-        img{
-          max-height: 100%;
-          max-width: 100%;
-          width: auto;
-          height: auto;
-          position: absolute;
-          top: 0;
-          bottom: 0;
-          left: 0;
-          right: 0;
-          margin: auto;
-        }
-      }
-      .ex{
-        color: $branco;
-        text-transform: uppercase;
-        font-family: $gotham;
-        font-weight: 200;
-        font-size: 10px;
-      }
-      input[type="file"] {
-        display: none;
-      }
-      .file-upload {
-        background-color: $azulClaro;
-        color: $preto;
-        font-weight: 300;
-        font-size: 14px;
-        display: inline-block;
-        cursor: pointer;
-      }
     }
+
+
 
 
 
@@ -409,6 +427,11 @@ h4{font-size: 12px;}
           margin: 45px auto;
         }
 
+        .objeto-imagem{
+          width: 120px;
+          height: 120px;
+        }
+
         .thumbnail-round {
           display: block;
           height: 120px;
@@ -453,6 +476,9 @@ h4{font-size: 12px;}
         h1.objeto-title{
           font-size: 45px;
           margin-top: 100px;
+        }
+        .objeto-imagem{
+          max-width: 360px;
         }
       }
       p{
